--- a/enbios2/demos/intro.ipynb
+++ b/enbios2/demos/intro.ipynb
@@ -295,49 +295,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'pyridine-compound production': ['kilogram', 3]},\n {'electricity production, hydro, run-of-river': ['kilowatt hour', 3]},\n {'electricity production, hydro, pumped storage': ['kilowatt hour', 3]}]"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# exp_data.scenarios = []\n",
-    "#\n",
-    "# for _ in range(3):\n",
-    "#     random_activity = choice(list(exp.activitiesMap.keys()))\n",
-    "#     print(random_activity)\n",
-    "#     exp_data.scenarios.append(\n",
-    "#         {\n",
-    "#             random_activity: [exp.activitiesMap[random_activity][\"unit\"], 3]\n",
-    "#         }\n",
-    "#     )"
+    "exp_data.scenarios = []\n",
+    "\n",
+    "for _ in range(3):\n",
+    "    random_activity = choice(list(exp.activitiesMap.keys()))\n",
+    "    # print(random_activity)\n",
+    "    exp_data.scenarios.append(\n",
+    "        {\n",
+    "            random_activity: [exp.activitiesMap[random_activity].output.unit, 3]\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "exp_data.scenarios"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:24:59.773310140Z",
-     "start_time": "2023-07-05T14:24:59.763951473Z"
+     "end_time": "2023-07-05T14:31:51.356553471Z",
+     "start_time": "2023-07-05T14:31:51.301314477Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-05 16:26:07,777 - enbios2.base.experiment - DEBUG - activity list\n"
+      "2023-07-05 16:32:03,819 - enbios2.base.experiment - DEBUG - activity list\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'alias'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[34], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m exp: Experiment \u001B[38;5;241m=\u001B[39m \u001B[43mExperiment\u001B[49m\u001B[43m(\u001B[49m\u001B[43mexp_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      2\u001B[0m results \u001B[38;5;241m=\u001B[39m exp\u001B[38;5;241m.\u001B[39mrun()\n",
+      "File \u001B[0;32m/mnt/SSD/projects/LIVENLab/enbios2/enbios2/base/experiment.py:184\u001B[0m, in \u001B[0;36mExperiment.__init__\u001B[0;34m(self, raw_data)\u001B[0m\n\u001B[1;32m    181\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtechnology_root_node: BasicTreeNode[ScenarioResultNodeData] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcreate_technology_tree()\n\u001B[1;32m    183\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmethods: \u001B[38;5;28mdict\u001B[39m[\u001B[38;5;28mstr\u001B[39m, ExperimentMethodData] \u001B[38;5;241m=\u001B[39m Experiment\u001B[38;5;241m.\u001B[39mvalidate_methods(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprepare_methods())\n\u001B[0;32m--> 184\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mscenarios: \u001B[38;5;28mlist\u001B[39m[Scenario] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvalidate_scenarios\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/mnt/SSD/projects/LIVENLab/enbios2/enbios2/base/experiment.py:387\u001B[0m, in \u001B[0;36mExperiment.validate_scenarios\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    385\u001B[0m raw_scenarios: \u001B[38;5;28mlist\u001B[39m[ExperimentScenarioData] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mraw_data\u001B[38;5;241m.\u001B[39mscenarios\n\u001B[1;32m    386\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m index, _scenario \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(raw_scenarios):\n\u001B[0;32m--> 387\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[43m_scenario\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43malias\u001B[49m:\n\u001B[1;32m    388\u001B[0m         _scenario\u001B[38;5;241m.\u001B[39malias \u001B[38;5;241m=\u001B[39m ExperimentScenarioData\u001B[38;5;241m.\u001B[39malias_factory(index)\n\u001B[1;32m    389\u001B[0m     scenarios\u001B[38;5;241m.\u001B[39mappend(validate_scenario(_scenario))\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'dict' object has no attribute 'alias'"
      ]
     }
    ],
    "source": [
-    "# exp: Experiment = Experiment(exp_data)\n",
-    "# results = exp.run()"
+    "exp: Experiment = Experiment(exp_data)\n",
+    "results = exp.run()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:26:08.872060999Z",
-     "start_time": "2023-07-05T14:26:07.766991128Z"
+     "end_time": "2023-07-05T14:32:05.207856135Z",
+     "start_time": "2023-07-05T14:32:03.791502362Z"
     }
    }
   },
