--- a/enbios2/demos/intro.ipynb
+++ b/enbios2/demos/intro.ipynb
@@ -14,32 +14,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:07:07.833338023Z",
-     "start_time": "2023-07-05T14:07:05.175147823Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-07-05 16:07:07,850 - enbios2.base.experiment - DEBUG - activity list\n"
-     ]
-    }
-   ],
-   "source": [
-    "bw2data.projects.set_current(\"ecoinvent\")\n",
-    "exp = Experiment.create(\"ecoinvent\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-07-05T14:07:07.875415534Z",
-     "start_time": "2023-07-05T14:07:07.836553033Z"
+     "end_time": "2023-07-06T08:18:13.280814977Z",
+     "start_time": "2023-07-06T08:18:08.554252802Z"
     }
    }
   },
@@ -48,10 +24,33 @@
    "execution_count": 3,
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-07-06 10:18:13,704 - enbios2.base.experiment - DEBUG - activity list\n"
+     ]
+    }
+   ],
+   "source": [
+    "bw2data.projects.set_current(\"ecoinvent\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-06T08:18:13.791596191Z",
+     "start_time": "2023-07-06T08:18:13.283953508Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
      "data": {
       "text/plain": "['biosphere3',\n 'apos_3.9.1_default',\n 'consequential_3.9.1_default',\n 'cutoff_3.9.1_default',\n 'cutoff_3.9_default']"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,20 +61,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:07:07.941624933Z",
-     "start_time": "2023-07-05T14:07:07.856143022Z"
+     "end_time": "2023-07-06T08:18:13.846077711Z",
+     "start_time": "2023-07-06T08:18:13.751110389Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "['market for waste polyethylene terephthalate' (kilogram, SI, None),\n 'market group for natural gas, high pressure' (cubic meter, GLO, None),\n 'market for paper, woodcontaining, lightweight coated' (kilogram, RER, None),\n 'electricity production, hydro, pumped storage' (kilowatt hour, CN-JS, None),\n 'electricity production, hydro, run-of-river' (kilowatt hour, IN-JH, None),\n 'fibre production, cotton, ginning' (kilogram, IN, None),\n 'treatment of spent antifreezer liquid, hazardous waste incineration' (kilogram, RoW, None),\n 'pyridine-compound production' (kilogram, RER, None),\n 'planing, lath, softwood, u=20%' (cubic meter, Europe without Switzerland, None),\n 'generator production, 200kW electrical' (unit, RER, None)]"
+      "text/plain": "['wood cladding production, softwood' (square meter, RoW, None),\n 'treatment of brake wear emissions, lorry' (kilogram, RoW, None),\n 'clay brick production' (kilogram, RoW, None),\n 'market for heat, for reuse in municipal waste incineration only' (megajoule, CH, None),\n 'land already in use, annual cropland to perennial crop' (kilogram, BR-AC, None),\n 'market for glycerine' (kilogram, RER, None),\n 'chlorothalonil production' (kilogram, RER, None),\n 'silencer production, steel, DN 315, 50 mm' (unit, CH, None),\n 'natural gas, liquefied, import from US' (cubic meter, RNA, None),\n 'market for used electric bicycle' (unit, GLO, None)]"
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,14 +88,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:19:41.604374521Z",
-     "start_time": "2023-07-05T14:19:41.213817903Z"
+     "end_time": "2023-07-06T08:18:16.165640346Z",
+     "start_time": "2023-07-06T08:18:13.845781830Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "experiment_activities = [\n",
@@ -113,20 +112,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:22:13.135182115Z",
-     "start_time": "2023-07-05T14:22:13.093606132Z"
+     "end_time": "2023-07-06T08:18:16.171013006Z",
+     "start_time": "2023-07-06T08:18:16.166971610Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'id': {'code': '18277df8a10170108ac21b60acb13c16'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'a41a1c1d58c1e6160f6c6516f7f4bff9'},\n  'output': ['cubic meter', 1]},\n {'id': {'code': 'd7499ddf8138ff5183e068df563c0654'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'b8a74c3cf4075b7bbb23b6b50d9f8676'},\n  'output': ['kilowatt hour', 1]},\n {'id': {'code': 'ba7d962ab827002fbc8df6ff0086f318'},\n  'output': ['kilowatt hour', 1]},\n {'id': {'code': '807ecabdf7a9f10e6801fb0723e86f57'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'a8bd1a2516a229ff785b789f89f10cd2'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'd1588ab1309a995d9ad42ce62655efb9'},\n  'output': ['kilogram', 1]},\n {'id': {'code': '1588fc543ab66e47895120ed281029f2'},\n  'output': ['cubic meter', 1]},\n {'id': {'code': '4b29bed545b4cd0b308c4514d31f4ba9'}, 'output': ['unit', 1]}]"
+      "text/plain": "[{'id': {'code': '19f62a0f0efde22a0da52046b0b5b055',\n   'name': 'wood cladding production, softwood'},\n  'output': ['square meter', 1]},\n {'id': {'code': '695fdb758e5ce639870829365a15dc26',\n   'name': 'treatment of brake wear emissions, lorry'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'a3dc16552c3afede8fb60d4b44332ccf',\n   'name': 'clay brick production'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'ad924a4abb1e9994a17bb5eebaffdbe4',\n   'name': 'market for heat, for reuse in municipal waste incineration only'},\n  'output': ['megajoule', 1]},\n {'id': {'code': '446b255c4de1c27124212b15a8909cea',\n   'name': 'land already in use, annual cropland to perennial crop'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'bed0525f0c75f4eb5d59f45dcf8a036d',\n   'name': 'market for glycerine'},\n  'output': ['kilogram', 1]},\n {'id': {'code': '577e9faaeca3a1eec1f584459e5de5ee',\n   'name': 'chlorothalonil production'},\n  'output': ['kilogram', 1]},\n {'id': {'code': 'a9e9f56f6f6c8996130ed58a13445960',\n   'name': 'silencer production, steel, DN 315, 50 mm'},\n  'output': ['unit', 1]},\n {'id': {'code': 'f711c346838e126a07b0b4aaf95fc4a3',\n   'name': 'natural gas, liquefied, import from US'},\n  'output': ['cubic meter', 1]},\n {'id': {'code': '814aed77ca2f20675335715b9692a5fd',\n   'name': 'market for used electric bicycle'},\n  'output': ['unit', 1]}]"
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,20 +136,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:19:42.045353794Z",
-     "start_time": "2023-07-05T14:19:42.041174040Z"
+     "end_time": "2023-07-06T08:18:16.328128618Z",
+     "start_time": "2023-07-06T08:18:16.172329395Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "[('EF v3.1 EN15804', 'ozone depletion', 'ozone depletion potential (ODP)'),\n ('ReCiPe 2016 v1.03, endpoint (E)',\n  'total: natural resources',\n  'natural resources'),\n ('ReCiPe 2016 v1.03, endpoint (H)',\n  'ecosystem quality',\n  'photochemical oxidant formation: terrestrial ecosystems')]"
+      "text/plain": "[('ReCiPe 2016 v1.03, endpoint (I) no LT',\n  'human health no LT',\n  'water use: human health no LT'),\n ('ReCiPe 2016 v1.03, midpoint (E)',\n  'human toxicity: non-carcinogenic',\n  'human toxicity potential (HTPnc)'),\n ('EDIP 2003 no LT', 'non-renewable resources no LT', 'coal no LT')]"
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,14 +162,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:19:42.448707710Z",
-     "start_time": "2023-07-05T14:19:42.442819587Z"
+     "end_time": "2023-07-06T08:18:16.487735339Z",
+     "start_time": "2023-07-06T08:18:16.328441062Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "experiment_methods = [\n",
@@ -183,14 +182,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:19:43.034951488Z",
-     "start_time": "2023-07-05T14:19:42.973924509Z"
+     "end_time": "2023-07-06T08:18:16.654865514Z",
+     "start_time": "2023-07-06T08:18:16.488007270Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "exp_data = ExperimentData(\n",
@@ -202,20 +201,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:19:43.741694575Z",
-     "start_time": "2023-07-05T14:19:43.708495599Z"
+     "end_time": "2023-07-06T08:18:16.826659318Z",
+     "start_time": "2023-07-06T08:18:16.657621963Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-05 16:19:44,695 - enbios2.base.experiment - DEBUG - activity list\n"
+      "2023-07-06 10:18:17,002 - enbios2.base.experiment - DEBUG - activity list\n"
      ]
     }
    ],
@@ -225,8 +224,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:19:45.729977031Z",
-     "start_time": "2023-07-05T14:19:44.682984920Z"
+     "end_time": "2023-07-06T08:18:26.186160536Z",
+     "start_time": "2023-07-06T08:18:16.827625053Z"
     }
    }
   },
@@ -295,13 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'pyridine-compound production': ['kilogram', 3]},\n {'electricity production, hydro, run-of-river': ['kilowatt hour', 3]},\n {'electricity production, hydro, pumped storage': ['kilowatt hour', 3]}]"
+      "text/plain": "[{'market for heat, for reuse in municipal waste incineration only': ['megajoule',\n   3]},\n {'land already in use, annual cropland to perennial crop': ['kilogram', 3]},\n {'natural gas, liquefied, import from US': ['cubic meter', 3]}]"
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,20 +322,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:31:51.356553471Z",
-     "start_time": "2023-07-05T14:31:51.301314477Z"
+     "end_time": "2023-07-06T08:18:26.196975396Z",
+     "start_time": "2023-07-06T08:18:26.187918802Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-05 16:32:03,819 - enbios2.base.experiment - DEBUG - activity list\n"
+      "2023-07-06 10:18:26,296 - enbios2.base.experiment - DEBUG - activity list\n"
      ]
     },
     {
@@ -346,7 +345,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[34], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m exp: Experiment \u001B[38;5;241m=\u001B[39m \u001B[43mExperiment\u001B[49m\u001B[43m(\u001B[49m\u001B[43mexp_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      2\u001B[0m results \u001B[38;5;241m=\u001B[39m exp\u001B[38;5;241m.\u001B[39mrun()\n",
+      "Cell \u001B[0;32mIn[13], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m exp: Experiment \u001B[38;5;241m=\u001B[39m \u001B[43mExperiment\u001B[49m\u001B[43m(\u001B[49m\u001B[43mexp_data\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m# results = exp.run()\u001B[39;00m\n",
       "File \u001B[0;32m/mnt/SSD/projects/LIVENLab/enbios2/enbios2/base/experiment.py:184\u001B[0m, in \u001B[0;36mExperiment.__init__\u001B[0;34m(self, raw_data)\u001B[0m\n\u001B[1;32m    181\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtechnology_root_node: BasicTreeNode[ScenarioResultNodeData] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcreate_technology_tree()\n\u001B[1;32m    183\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmethods: \u001B[38;5;28mdict\u001B[39m[\u001B[38;5;28mstr\u001B[39m, ExperimentMethodData] \u001B[38;5;241m=\u001B[39m Experiment\u001B[38;5;241m.\u001B[39mvalidate_methods(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprepare_methods())\n\u001B[0;32m--> 184\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mscenarios: \u001B[38;5;28mlist\u001B[39m[Scenario] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvalidate_scenarios\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
       "File \u001B[0;32m/mnt/SSD/projects/LIVENLab/enbios2/enbios2/base/experiment.py:387\u001B[0m, in \u001B[0;36mExperiment.validate_scenarios\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    385\u001B[0m raw_scenarios: \u001B[38;5;28mlist\u001B[39m[ExperimentScenarioData] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mraw_data\u001B[38;5;241m.\u001B[39mscenarios\n\u001B[1;32m    386\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m index, _scenario \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(raw_scenarios):\n\u001B[0;32m--> 387\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[43m_scenario\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43malias\u001B[49m:\n\u001B[1;32m    388\u001B[0m         _scenario\u001B[38;5;241m.\u001B[39malias \u001B[38;5;241m=\u001B[39m ExperimentScenarioData\u001B[38;5;241m.\u001B[39malias_factory(index)\n\u001B[1;32m    389\u001B[0m     scenarios\u001B[38;5;241m.\u001B[39mappend(validate_scenario(_scenario))\n",
       "\u001B[0;31mAttributeError\u001B[0m: 'dict' object has no attribute 'alias'"
@@ -355,37 +354,27 @@
    ],
    "source": [
     "exp: Experiment = Experiment(exp_data)\n",
-    "results = exp.run()"
+    "# results = exp.run()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:32:05.207856135Z",
-     "start_time": "2023-07-05T14:32:03.791502362Z"
+     "end_time": "2023-07-06T08:18:28.832834734Z",
+     "start_time": "2023-07-06T08:18:26.198320705Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "[]"
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "# exp.scenarios"
+    "exp.scenarios"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-05T14:26:39.435286101Z",
-     "start_time": "2023-07-05T14:26:39.428193209Z"
+     "start_time": "2023-07-06T08:18:28.823054177Z"
     }
    }
   },
