--- a/projects/seed_enb2/prepare.ipynb
+++ b/projects/seed_enb2/prepare.ipynb
@@ -2,22 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:15.373103376Z",
-     "start_time": "2023-07-11T13:30:15.331154052Z"
-    }
-   },
+   "execution_count": 19,
    "outputs": [],
    "source": [
-    "import bw2data"
-   ]
+    "import bw2data\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "project_path = next(filter(lambda p: p.name == \"enbios2\", Path(\".\").absolute().parents)).as_posix()\n",
+    "sys.path.insert(0, project_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-13T07:36:19.776268835Z",
+     "start_time": "2023-07-13T07:36:19.722524662Z"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from enbios2.generic.files import DataPath\n",
@@ -27,14 +31,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:15.625530682Z",
-     "start_time": "2023-07-11T13:30:15.599787050Z"
+     "end_time": "2023-07-13T07:24:43.132823145Z",
+     "start_time": "2023-07-13T07:24:42.889983343Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -43,7 +47,7 @@
       "Project: default\n",
       "[]\n",
       "Project: ecoinvent\n",
-      "['biosphere3', 'apos_3.9.1_default', 'consequential_3.9.1_default', 'cutoff_3.9.1_default', 'cutoff_3.9_default']\n"
+      "['biosphere3', 'cutoff_3.9.1_default', 'seeds']\n"
      ]
     }
    ],
@@ -55,14 +59,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:15.985545528Z",
-     "start_time": "2023-07-11T13:30:15.953974368Z"
+     "end_time": "2023-07-13T07:24:43.563796561Z",
+     "start_time": "2023-07-13T07:24:43.139611689Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import openpyxl\n",
@@ -74,20 +78,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:17.466757894Z",
-     "start_time": "2023-07-11T13:30:16.708755986Z"
+     "end_time": "2023-07-13T07:24:44.749613100Z",
+     "start_time": "2023-07-13T07:24:43.564597367Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "([('wind_onshore', 'electricity', '81174ec2c20931c1a36f65c654bbd11e'),\n  ('wind_offshore', 'electricity', '46839adbc3cf15621ddbbe687eaa6df1'),\n  ('hydro_run_of_river', 'electricity', 'b870e3d3ddd5b634d016940064b27532'),\n  ('hydro_reservoir', 'electricity', 'c868c4688fbf78f5ca3787ac3d83312b'),\n  ('ccgt', 'electricity', '4833b6352dfe15c95ae46fd280371cd3'),\n  ('chp_biofuel_extraction',\n   'electricity',\n   '1952fb157a18463b0028629917057bcf'),\n  ('open_field_pv', 'electricity', '206c2e2c30f45d47ea2e9a3701f8ecc5'),\n  ('electrolysis', 'electricity', 'FILL'),\n  ('existing_wind', 'electricity', '81174ec2c20931c1a36f65c654bbd11e'),\n  ('existing_pv', 'electricity', '206c2e2c30f45d47ea2e9a3701f8ecc5'),\n  ('roof_mounted_pv', 'electricity', '1d7a3591e7a3d033a25e0eaf699bb50b'),\n  ('chp_wte_back_pressure', 'electricity', 'fd6356e68720aec505c69cdadb3046fc'),\n  ('chp_methane_extraction',\n   'electricity',\n   'a0d0ab65435d0487d33b4be142483d76'),\n  ('waste_supply', 'electricity', 'fd6356e68720aec505c69cdadb3046fc'),\n  ('biofuel_supply', 'biofuel', 'f1cc5e0b69dcd3bdb2c6a4d393521a65'),\n  ('chp_biofuel_extraction', 'heat', '413bc4617794c6e8b07038dbeca64adb'),\n  ('chp_wte_back_pressure', 'heat', '37ebaba3250e37c42d28a353f27632f5'),\n  ('chp_methane_extraction', 'heat', 'a3039e0a35ed472774d6ed66262c67f3'),\n  ('biofuel_boiler', 'heat', '413bc4617794c6e8b07038dbeca64adb'),\n  ('methane_boiler', 'heat', 'a3039e0a35ed472774d6ed66262c67f3'),\n  ('battery', 'electricity', 'a2634d3b6d27046ccb1d0af9c0384c64'),\n  ('Heat_storage_big', 'heat', '07db2c419abe9cffeb033aa0bed7f0ba'),\n  ('heat_storage_small', 'heat', '14e0227e764a4a098e5fd34525ccaf3f'),\n  ('Methane_storage', 'methane', 'da586847dea594ccd75188627f456d03'),\n  ('pumped_hydro', 'electricity', '309ff1f1194f2b5ea34d8c077103b1e3'),\n  ('el_import', 'electricity', '1373b63314d03c42313a372bca1bd648'),\n  ('biofuel_to_diesel', 'diesel', '3a6586952eff793738eef72743703e90'),\n  ('biofuel_to_methane', 'methane', '7d82a9b0a28dc30058260b5c68fbad95'),\n  ('biofuel_to_methanol', 'methanol', 'df54a237474430370bb580c2451d405d')],\n ['81174ec2c20931c1a36f65c654bbd11e',\n  '46839adbc3cf15621ddbbe687eaa6df1',\n  'b870e3d3ddd5b634d016940064b27532',\n  'c868c4688fbf78f5ca3787ac3d83312b',\n  '4833b6352dfe15c95ae46fd280371cd3',\n  '1952fb157a18463b0028629917057bcf',\n  '206c2e2c30f45d47ea2e9a3701f8ecc5',\n  'FILL',\n  '81174ec2c20931c1a36f65c654bbd11e',\n  '206c2e2c30f45d47ea2e9a3701f8ecc5',\n  '1d7a3591e7a3d033a25e0eaf699bb50b',\n  'fd6356e68720aec505c69cdadb3046fc',\n  'a0d0ab65435d0487d33b4be142483d76',\n  'fd6356e68720aec505c69cdadb3046fc',\n  'f1cc5e0b69dcd3bdb2c6a4d393521a65',\n  '413bc4617794c6e8b07038dbeca64adb',\n  '37ebaba3250e37c42d28a353f27632f5',\n  'a3039e0a35ed472774d6ed66262c67f3',\n  '413bc4617794c6e8b07038dbeca64adb',\n  'a3039e0a35ed472774d6ed66262c67f3',\n  'a2634d3b6d27046ccb1d0af9c0384c64',\n  '07db2c419abe9cffeb033aa0bed7f0ba',\n  '14e0227e764a4a098e5fd34525ccaf3f',\n  'da586847dea594ccd75188627f456d03',\n  '309ff1f1194f2b5ea34d8c077103b1e3',\n  '1373b63314d03c42313a372bca1bd648',\n  '3a6586952eff793738eef72743703e90',\n  '7d82a9b0a28dc30058260b5c68fbad95',\n  'df54a237474430370bb580c2451d405d'])"
      },
-     "execution_count": 100,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,20 +112,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:18.914693041Z",
-     "start_time": "2023-07-11T13:30:18.883319225Z"
+     "end_time": "2023-07-13T07:24:44.815879891Z",
+     "start_time": "2023-07-13T07:24:44.787913568Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "['biosphere3',\n 'apos_3.9.1_default',\n 'consequential_3.9.1_default',\n 'cutoff_3.9.1_default',\n 'cutoff_3.9_default']"
+      "text/plain": "['biosphere3', 'cutoff_3.9.1_default', 'seeds']"
      },
-     "execution_count": 101,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,20 +137,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:19.809949906Z",
-     "start_time": "2023-07-11T13:30:19.781756036Z"
+     "end_time": "2023-07-13T07:24:47.147926102Z",
+     "start_time": "2023-07-13T07:24:47.077700249Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21263/21263 [00:01<00:00, 14537.56it/s]\n"
+      "100%|██████████| 21238/21238 [00:03<00:00, 6668.97it/s] \n"
      ]
     }
    ],
@@ -171,20 +175,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:22.535491965Z",
-     "start_time": "2023-07-11T13:30:21.060412188Z"
+     "end_time": "2023-07-13T07:24:53.671848392Z",
+     "start_time": "2023-07-13T07:24:50.463080626Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "[('heat, from municipal waste incineration to generic market for heat district or industrial, other than natural gas' (megajoule, PT, None),\n  'chp_wte_back_pressure',\n  'heat',\n  '37ebaba3250e37c42d28a353f27632f5'),\n ('market for biomethane, high pressure' (cubic meter, CH, None),\n  'biofuel_to_methane',\n  'methane',\n  '7d82a9b0a28dc30058260b5c68fbad95'),\n ('heat and power co-generation, wood chips, 6667 kW, state-of-the-art 2014' (kilowatt hour, PT, None),\n  'chp_biofuel_extraction',\n  'electricity',\n  '1952fb157a18463b0028629917057bcf'),\n ('electricity production, photovoltaic, 3kWp slanted-roof installation, multi-Si, panel, mounted' (kilowatt hour, PT, None),\n  'roof_mounted_pv',\n  'electricity',\n  '1d7a3591e7a3d033a25e0eaf699bb50b'),\n ('electricity production, wind, 1-3MW turbine, onshore' (kilowatt hour, PT, None),\n  'wind_onshore',\n  'electricity',\n  '81174ec2c20931c1a36f65c654bbd11e'),\n ('heat and power co-generation, natural gas, combined cycle power plant, 400MW electrical' (megajoule, PT, None),\n  'chp_methane_extraction',\n  'heat',\n  'a3039e0a35ed472774d6ed66262c67f3'),\n ('market for heat storage, 2000l' (unit, GLO, None),\n  'Heat_storage_big',\n  'heat',\n  '07db2c419abe9cffeb033aa0bed7f0ba'),\n ('electricity production, hydro, run-of-river' (kilowatt hour, PT, None),\n  'hydro_run_of_river',\n  'electricity',\n  'b870e3d3ddd5b634d016940064b27532'),\n ('electricity production, hydro, pumped storage' (kilowatt hour, PT, None),\n  'pumped_hydro',\n  'electricity',\n  '309ff1f1194f2b5ea34d8c077103b1e3'),\n ('heat and power co-generation, natural gas, combined cycle power plant, 400MW electrical' (kilowatt hour, PT, None),\n  'chp_methane_extraction',\n  'electricity',\n  'a0d0ab65435d0487d33b4be142483d76'),\n ('electricity, from municipal waste incineration to generic market for electricity, medium voltage' (kilowatt hour, PT, None),\n  'chp_wte_back_pressure',\n  'electricity',\n  'fd6356e68720aec505c69cdadb3046fc'),\n ('electricity production, wind, 1-3MW turbine, offshore' (kilowatt hour, PT, None),\n  'wind_offshore',\n  'electricity',\n  '46839adbc3cf15621ddbbe687eaa6df1'),\n ('market for fatty acid methyl ester' (kilogram, RoW, None),\n  'biofuel_to_diesel',\n  'diesel',\n  '3a6586952eff793738eef72743703e90'),\n ('market for ethanol, without water, in 99.7% solution state, from fermentation, vehicle grade' (kilogram, CH, None),\n  'biofuel_supply',\n  'biofuel',\n  'f1cc5e0b69dcd3bdb2c6a4d393521a65'),\n ('market for hot water tank, 600l' (unit, GLO, None),\n  'heat_storage_small',\n  'heat',\n  '14e0227e764a4a098e5fd34525ccaf3f'),\n ('market for methanol, from biomass' (kilogram, CH, None),\n  'biofuel_to_methanol',\n  'methanol',\n  'df54a237474430370bb580c2451d405d'),\n ('market for battery cell, Li-ion, NCA' (kilogram, GLO, None),\n  'battery',\n  'electricity',\n  'a2634d3b6d27046ccb1d0af9c0384c64'),\n ('electricity production, natural gas, combined cycle power plant' (kilowatt hour, PT, None),\n  'ccgt',\n  'electricity',\n  '4833b6352dfe15c95ae46fd280371cd3'),\n ('electricity production, photovoltaic, 570kWp open ground installation, multi-Si' (kilowatt hour, PT, None),\n  'open_field_pv',\n  'electricity',\n  '206c2e2c30f45d47ea2e9a3701f8ecc5'),\n ('heat and power co-generation, wood chips, 6667 kW, state-of-the-art 2014' (megajoule, PT, None),\n  'chp_biofuel_extraction',\n  'heat',\n  '413bc4617794c6e8b07038dbeca64adb'),\n ('market for electricity, high voltage' (kilowatt hour, ES, None),\n  'el_import',\n  'electricity',\n  '1373b63314d03c42313a372bca1bd648'),\n ('electricity production, hydro, reservoir, non-alpine region' (kilowatt hour, PT, None),\n  'hydro_reservoir',\n  'electricity',\n  'c868c4688fbf78f5ca3787ac3d83312b'),\n ('compressed air energy storage plant construction, 200 MW electrical' (unit, RER, None),\n  'Methane_storage',\n  'methane',\n  'da586847dea594ccd75188627f456d03')]"
+      "text/plain": "[('heat and power co-generation, natural gas, combined cycle power plant, 400MW electrical' (megajoule, PT, None),\n  'chp_methane_extraction',\n  'heat',\n  'a3039e0a35ed472774d6ed66262c67f3'),\n ('electricity production, hydro, reservoir, non-alpine region' (kilowatt hour, PT, None),\n  'hydro_reservoir',\n  'electricity',\n  'c868c4688fbf78f5ca3787ac3d83312b'),\n ('electricity production, natural gas, combined cycle power plant' (kilowatt hour, PT, None),\n  'ccgt',\n  'electricity',\n  '4833b6352dfe15c95ae46fd280371cd3'),\n ('electricity production, wind, 1-3MW turbine, onshore' (kilowatt hour, PT, None),\n  'wind_onshore',\n  'electricity',\n  '81174ec2c20931c1a36f65c654bbd11e'),\n ('market for methanol, from biomass' (kilogram, CH, None),\n  'biofuel_to_methanol',\n  'methanol',\n  'df54a237474430370bb580c2451d405d'),\n ('heat and power co-generation, wood chips, 6667 kW, state-of-the-art 2014' (megajoule, PT, None),\n  'chp_biofuel_extraction',\n  'heat',\n  '413bc4617794c6e8b07038dbeca64adb'),\n ('market for electricity, high voltage' (kilowatt hour, ES, None),\n  'el_import',\n  'electricity',\n  '1373b63314d03c42313a372bca1bd648'),\n ('market for fatty acid methyl ester' (kilogram, RoW, None),\n  'biofuel_to_diesel',\n  'diesel',\n  '3a6586952eff793738eef72743703e90'),\n ('market for ethanol, without water, in 99.7% solution state, from fermentation, vehicle grade' (kilogram, CH, None),\n  'biofuel_supply',\n  'biofuel',\n  'f1cc5e0b69dcd3bdb2c6a4d393521a65'),\n ('market for heat storage, 2000l' (unit, GLO, None),\n  'Heat_storage_big',\n  'heat',\n  '07db2c419abe9cffeb033aa0bed7f0ba'),\n ('market for hot water tank, 600l' (unit, GLO, None),\n  'heat_storage_small',\n  'heat',\n  '14e0227e764a4a098e5fd34525ccaf3f'),\n ('market for battery cell, Li-ion, NCA' (kilogram, GLO, None),\n  'battery',\n  'electricity',\n  'a2634d3b6d27046ccb1d0af9c0384c64'),\n ('heat and power co-generation, natural gas, combined cycle power plant, 400MW electrical' (kilowatt hour, PT, None),\n  'chp_methane_extraction',\n  'electricity',\n  'a0d0ab65435d0487d33b4be142483d76'),\n ('heat, from municipal waste incineration to generic market for heat district or industrial, other than natural gas' (megajoule, PT, None),\n  'chp_wte_back_pressure',\n  'heat',\n  '37ebaba3250e37c42d28a353f27632f5'),\n ('electricity production, hydro, pumped storage' (kilowatt hour, PT, None),\n  'pumped_hydro',\n  'electricity',\n  '309ff1f1194f2b5ea34d8c077103b1e3'),\n ('heat and power co-generation, wood chips, 6667 kW, state-of-the-art 2014' (kilowatt hour, PT, None),\n  'chp_biofuel_extraction',\n  'electricity',\n  '1952fb157a18463b0028629917057bcf'),\n ('electricity, from municipal waste incineration to generic market for electricity, medium voltage' (kilowatt hour, PT, None),\n  'chp_wte_back_pressure',\n  'electricity',\n  'fd6356e68720aec505c69cdadb3046fc'),\n ('electricity production, hydro, run-of-river' (kilowatt hour, PT, None),\n  'hydro_run_of_river',\n  'electricity',\n  'b870e3d3ddd5b634d016940064b27532'),\n ('electricity production, wind, 1-3MW turbine, offshore' (kilowatt hour, PT, None),\n  'wind_offshore',\n  'electricity',\n  '46839adbc3cf15621ddbbe687eaa6df1'),\n ('electricity production, photovoltaic, 570kWp open ground installation, multi-Si' (kilowatt hour, PT, None),\n  'open_field_pv',\n  'electricity',\n  '206c2e2c30f45d47ea2e9a3701f8ecc5'),\n ('market for biomethane, high pressure' (cubic meter, CH, None),\n  'biofuel_to_methane',\n  'methane',\n  '7d82a9b0a28dc30058260b5c68fbad95'),\n ('compressed air energy storage plant construction, 200 MW electrical' (unit, RER, None),\n  'Methane_storage',\n  'methane',\n  'da586847dea594ccd75188627f456d03'),\n ('electricity production, photovoltaic, 3kWp slanted-roof installation, multi-Si, panel, mounted' (kilowatt hour, PT, None),\n  'roof_mounted_pv',\n  'electricity',\n  '1d7a3591e7a3d033a25e0eaf699bb50b')]"
      },
-     "execution_count": 103,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,20 +199,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:23.365142926Z",
-     "start_time": "2023-07-11T13:30:23.314054128Z"
+     "end_time": "2023-07-13T07:24:55.342581781Z",
+     "start_time": "2023-07-13T07:24:55.252979765Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "[('electrolysis', 'electricity', 'FILL'),\n ('existing_wind', 'electricity', '81174ec2c20931c1a36f65c654bbd11e'),\n ('existing_pv', 'electricity', '206c2e2c30f45d47ea2e9a3701f8ecc5'),\n ('waste_supply', 'electricity', 'fd6356e68720aec505c69cdadb3046fc'),\n ('biofuel_boiler', 'heat', '413bc4617794c6e8b07038dbeca64adb'),\n ('methane_boiler', 'heat', 'a3039e0a35ed472774d6ed66262c67f3')]"
      },
-     "execution_count": 104,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,8 +224,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-11T13:30:25.008291290Z",
-     "start_time": "2023-07-11T13:30:25.000073978Z"
+     "end_time": "2023-07-13T07:24:56.882589764Z",
+     "start_time": "2023-07-13T07:24:56.854628558Z"
     }
    }
   },
